# image_optim_greensoftware

./: .gitignore  README.markdown  README_optimization1-ale.md  README_optimization3-apostolos.md
benchmarks/: run_image_optim.sh
energy-benchmarking/: .gitlab-ci.yml  Cargo.toml  README.md
energy-benchmarking/energy-bench/: Cargo.toml
energy-benchmarking/energy-bench/src/: bench.rs  bin.rs  energy_acc.rs  idle.rs  lib.rs  logger.rs  metadata.rs  output.rs  run_result.rs  software_energy_lab.rs
energy-benchmarking/energy-bench/src/software_energy_lab/: hwmon.rs  ina.rs  nvml.rs
energy-benchmarking/example/: Cargo.toml
energy-benchmarking/example/src/: async.rs  image_optim.rs  metadata.rs  minimal.rs  options.rs  overhead.rs  serverclient.rs
energy-benchmarking/ffi/: Cargo.toml  build.rs  energy_bench.h
energy-benchmarking/ffi/src/: lib.rs
lib/: image_optim.rb
lib/image_optim/: cache.rb  config.rb
lib/image_optim/runner/: option_parser.rb
spec/: image_optim_spec.rb
spec/image_optim/: config_spec.rb
spec/image_optim/runner/: option_parser_spec.rb
